[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DATE" type="LineEdit" parent="."]
margin_left = 137.0
margin_top = 133.0
margin_right = 347.0
margin_bottom = 171.0
text = "13/11/1995"
align = 1
placeholder_text = "DATE"

[node name="TIME" type="LineEdit" parent="."]
margin_left = 137.0
margin_top = 193.0
margin_right = 347.0
margin_bottom = 231.0
text = "24:00"
align = 1
placeholder_text = "TIME"
caret_blink = true

[node name="I_E" type="OptionButton" parent="."]
margin_left = 136.0
margin_top = 243.0
margin_right = 347.0
margin_bottom = 281.0
text = "EXPENSE"
align = 1
items = [ "EXPENSE", null, false, 0, null, "INCOME", null, false, 1, null ]
selected = 0

[node name="AMOUNT" type="LineEdit" parent="."]
margin_left = 137.0
margin_top = 299.0
margin_right = 347.0
margin_bottom = 337.0
text = "1000"
align = 1
placeholder_text = "AMOUNT"

[node name="DESC" type="LineEdit" parent="."]
margin_left = 137.0
margin_top = 354.0
margin_right = 347.0
margin_bottom = 392.0
text = "MGF"
align = 1
placeholder_text = "DESCRIPTION"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 495.0
margin_right = 515.0
margin_bottom = 596.0

[node name="CASH_IN_HAND" type="RichTextLabel" parent="."]
margin_left = 667.0
margin_top = 160.0
margin_right = 938.0
margin_bottom = 188.0
text = "CASH IN HAND"

[node name="TOTAL_INCOME" type="RichTextLabel" parent="."]
margin_left = 667.0
margin_top = 219.0
margin_right = 976.0
margin_bottom = 248.0
text = "TOTAL_INCOME"

[node name="TOTAL_EXPENSE" type="RichTextLabel" parent="."]
margin_left = 667.0
margin_top = 269.0
margin_right = 948.0
margin_bottom = 301.0
text = "TOTAL_EXPENSE
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="SEND" type="Button" parent="."]
margin_left = 177.0
margin_top = 413.0
margin_right = 289.0
margin_bottom = 457.0
text = "ENTER"

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 45.0
align = 1
valign = 1
uppercase = true

[node name="ref" type="Button" parent="."]
margin_left = 687.0
margin_top = 99.0
margin_right = 744.0
margin_bottom = 133.0
text = "refresh"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="SEND" to="." method="_on_SEND_pressed"]
[connection signal="pressed" from="ref" to="." method="_on_ref_pressed"]
